feat: add base/oauth2-foundation with OAuth login and DB upsert
Co-authored-by: Cursor <cursoragent@cursor.com>